<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Storm User</string>
    <string name="action_settings">Settings</string>
ar
    <!-- MAIN ACTIVITY STRINGS -->
    <string name="team_number">   Enter Team Number</string>
    <string name="begin_match">Begin Match</string>
    <string name="title_activity_match">Match #</string>
    <string name="match_number">   Enter Match Number</string>
    <string name="title_name">Storm Scouting</string>
    <string name="txt_blueTeam">Blue Alliance</string>
    <string name="txt_redTeam">Red Alliance</string>
    <string name="gen">Generate QR Code</string>

    <!-- HELP STRINGS -->
    <string name="txt_help">Help</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="auto_frag">Auto</string>
    <string name="tele_frag">Tele</string>
    <string name="submit_frag">Submit</string>

    <!-- Auto strings -->
    <string name="robot_set">Robot in Auto Zone</string>
    <string name="tote_set">Tote Put In Auto Zone</string>
    <string name="container_set">Container Put In Auto Zone</string>
    <string name="stacked_tote_set">Assisted in Stacking Totes</string>

    <!-- Tele Strings -->
    <string name="tote_level">Tote and Can Level</string>
    <string name="can_level">Recycle Can Level</string>
    <string name="tote_level_1">Tote Level 1</string>
    <string name="tote_level_2">Tote Level 2</string>
    <string name="tote_level_3">Tote Level 3</string>
    <string name="tote_level_4">Tote Level 4</string>
    <string name="tote_level_5">Tote Level 5</string>
    <string name="tote_level_6">Tote Level 6</string>
    <string name="cans_level_1">Can Level 1</string>
    <string name="cans_level_2">Can Level 2</string>
    <string name="cans_level_3">Can Level 3</string>
    <string name="cans_level_4">Can Level 4</string>
    <string name="cans_level_5">Can Level 5</string>
    <string name="cans_level_6">Can Level 6</string>
    <string name="add_stack">Submit</string>
    <string name="noodle">Noodle Info</string>
    <string name="qr">Save and Generate QR</string>
    <string name="noodleInCan">Noodle in Container</string>


    <string name="coop_level_1">Coop Tote Level 1</string>
    <string name="coop_level_2">Coop Tote Level 2</string>
    <string name="coop_level_3">Coop Tote Level 3</string>
    <string name="coop_level_4">Coop Tote Level 4</string>

    <!-- Submit strings -->
    <string name="save_button">Save and Exit</string>
    <string name="title_activity_qr">QR Code</string>
    <string name="exit">Return to Main Screen</string>
    <string name="title_activity_error_checker">Error Checker</string>
    <string name="trouble_nav">Trouble Moving over Noodles</string>


    <string name="website">www.stormroboticsnj.org</string>
    <string name="twitter">twitter.com/stormroboticsnj</string>

    <string name="uninstall">Uninstall</string>
    <string name="install">Install</string>

</resources>
