<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@android:color/background_dark"
    android:screenOrientation="portrait"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp">

    <EditText
        android:id="@+id/te_team_num"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_gravity="center_horizontal"
        android:background="#ffffff"
        android:ems="10"
        android:hint="@string/team_number"
        android:inputType="number"
        android:layout_marginBottom="10dp"
        android:paddingLeft="15dp" />

    <EditText
        android:id="@+id/te_match_num"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_gravity="center_horizontal"
        android:background="#ffffff"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/match_number"
        android:layout_marginBottom="10dp"
        android:paddingLeft="15dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <RadioButton
            android:id="@+id/btn_blue"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:background="@android:color/holo_blue_light"
            android:text="@string/txt_blueTeam" />

        <RadioButton
            android:id="@+id/btn_red"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:background="@android:color/holo_red_light"
            android:text="@string/txt_redTeam" />
    </RadioGroup>

    <Button
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:text="@string/begin_match"
        android:id="@+id/btn_begin"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/black"
        android:background="@android:color/background_light"
        android:onClick="startMatch"
        android:stateListAnimator="@null"
        android:layout_marginBottom="10dp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/storm_logo"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/storm_logo_text_v2" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="10dp"
        android:id="@+id/first_logo"
        android:background="@drawable/first" />
</LinearLayout>