<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_red_dark"
    android:padding="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tote_level"
        android:id="@+id/tv_grey"
        android:textSize="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/can_level"
        android:id="@+id/tv_can"
        android:textSize="50dp"
        android:layout_below="@+id/tote_level6"
        android:layout_alignLeft="@+id/tv_grey"
        android:layout_alignStart="@+id/tv_grey"
        android:layout_marginBottom="20dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:text="@string/add_stack"
        android:id="@+id/btn_add_stack"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:onClick="addStack"
        android:nestedScrollingEnabled="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New CheckBox"
        android:id="@+id/tote_level1"
        android:textSize="30dp"
        android:layout_below="@+id/tv_grey"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#ffffffff"
        android:layout_marginBottom="20dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New CheckBox"
        android:id="@+id/tote_level2"
        android:textSize="30dp"
        android:textColor="#ffffffff"
        android:layout_below="@+id/tote_level1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New CheckBox"
        android:id="@+id/tote_level3"
        android:textSize="30dp"
        android:textColor="#ffffffff"
        android:layout_below="@+id/tote_level2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New CheckBox"
        android:id="@+id/tote_level4"
        android:textSize="30dp"
        android:textColor="#ffffffff"
        android:layout_below="@+id/tote_level3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New CheckBox"
        android:id="@+id/tote_level5"
        android:textSize="30dp"
        android:textColor="#ffffffff"
        android:layout_below="@+id/tote_level4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New CheckBox"
        android:id="@+id/tote_level6"
        android:textSize="30dp"
        android:textColor="#ffffffff"
        android:layout_below="@+id/tote_level5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New CheckBox"
        android:id="@+id/can_level2"
        android:textSize="30dp"
        android:textColor="#ffffffff"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_can"
        android:layout_marginBottom="20dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New CheckBox"
        android:id="@+id/can_level3"
        android:textSize="30dp"
        android:textColor="#ffffffff"
        android:layout_below="@+id/can_level2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New CheckBox"
        android:id="@+id/can_level4"
        android:textSize="30dp"
        android:textColor="#ffffffff"
        android:layout_below="@+id/can_level3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New CheckBox"
        android:id="@+id/can_level5"
        android:textSize="30dp"
        android:textColor="#ffffffff"
        android:layout_below="@+id/can_level4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New CheckBox"
        android:id="@+id/can_level6"
        android:textSize="30dp"
        android:textColor="#ffffffff"
        android:layout_below="@+id/can_level5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp" />

</RelativeLayout>